# kore-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION-v0.6.md  README.md  article-devto.md  hatch_build.py  kore-daemon.sh  pyproject.toml  requirements.txt  start.sh  test_pagination_fix.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-sdk.yml  ci.yml  publish.yml
docs/: competitive-analysis-2025.md  v1.0-roadmap.md
examples/: async_usage.py  basic_usage.py  langchain_example.py
kore_memory/: __init__.py  acl.py  analytics.py  audit.py  auth.py  auto_tuner.py  cli.py  client.py  compressor.py  config.py  dashboard.py  database.py  decay.py  embedder.py  events.py  main.py  mcp_server.py  models.py  plugins.py  repository.py  scorer.py  storage.py  summarizer.py  vector_index.py  welcome.py
kore_memory/integrations/: __init__.py  crewai.py  entities.py  langchain.py  openai_agents.py  pydantic_ai.py
kore_memory/repository/: __init__.py  graph.py  lifecycle.py  memory.py  search.py  sessions.py
kore_memory/templates/: dashboard.html
scripts/: import_memory.py
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/js/src/: client.ts  errors.ts  index.ts  types.ts
sdk/js/tests/: client.test.ts  errors.test.ts  helpers.ts
src/: __init__.py  auth.py  cli.py  compressor.py  config.py  dashboard.py  database.py  decay.py  embedder.py  main.py  mcp_server.py  models.py  repository.py
tests/: conftest.py  test_api.py  test_audit.py  test_auth_events.py  test_auto_tuner.py  test_cli.py  test_client.py  test_client_sync.py  test_crewai.py  test_dashboard.py  test_entities.py  test_langchain.py  test_mcp.py  test_sessions.py  test_v11_fixes.py  test_v12_features.py  test_v2_features.py
