[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kore-memory"
version = "0.5.3"
description = "The memory layer that thinks like a human: remembers what matters, forgets what doesn't, and never calls home."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "memory", "agents", "llm", "embeddings", "semantic-search", "rag", "forgetting-curve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/auriti-web-design/kore-memory"
Repository = "https://github.com/auriti-web-design/kore-memory"
Issues = "https://github.com/auriti-web-design/kore-memory/issues"

[project.scripts]
kore = "src.cli:main"
kore-mcp = "src.mcp_server:main"
kore-welcome = "src.welcome:print_welcome"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["assets/logo.svg"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
