[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kore-memory"
version = "1.0.0"
description = "The memory layer that thinks like a human: remembers what matters, forgets what doesn't, and never calls home."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "memory", "agents", "llm", "embeddings", "semantic-search", "rag", "forgetting-curve"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
]
nlp = [
    "spacy>=3.7.0",
]
mcp = [
    "mcp>=1.0.0",
]
crewai = [
    "crewai>=0.28.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/auriti-web-design/kore-memory"
Documentation = "https://auritidesign.it/docs"
Repository = "https://github.com/auriti-web-design/kore-memory"
Issues = "https://github.com/auriti-web-design/kore-memory/issues"

[project.scripts]
kore = "kore_memory.cli:main"
kore-mcp = "kore_memory.mcp_server:main"
kore-welcome = "kore_memory.welcome:print_welcome"

[tool.hatch.build.targets.wheel]
packages = ["kore_memory"]
artifacts = ["assets/logo.svg"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B603", "B607", "B110", "B112", "B608"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = [
    "S101",    # assert — usato nei test
    "S603",    # subprocess — non applicabile
    "S607",    # partial path — non applicabile
    "B008",    # function call in default arg — Depends() pattern FastAPI
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
